# gazebo_custom_plugins

./: CMakeLists.txt  package.xml
env-hooks/: gazebo_custom_plugins.dsv.in
include/gazebo_custom_plugins/: contact_plugin.hpp  conveyor_belt_plugin.hpp
launch/: simple_conveyor_belt_demo.launch.py  test_gazebo_plugin_demo.launch.py
src/: contact_plugin.cpp  conveyor_belt_plugin.cpp  test_gazebo_plugin.cpp
urdf/: conveyor_belt.urdf  simple_coveyor_belt.urdf  test_conveyor.urdf
worlds/: box_spawn.world
